--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>hola mundo</h1>
     <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ducimus similique nisi distinctio, reprehenderit, suscipit sunt ratione ut perferendis nesciunt enim quia eos impedit dolore autem numquam quisquam delectus officia et.
+        Besto Programador
     </p>
     
 </body>
